Blog landing page made

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,9 +7,9 @@
   align-items: center;
   height: 100vh;
   padding: 15px 0 15px 0;
-  /* font-family: "Roboto"; */
   font-family: "Poppins", sans-serif;
   font-weight: 100;
+  background-color: #1d1d20;
 }
 
 .superHero {
