--- a/app/open-ai/open-ai.module.css
+++ b/app/open-ai/open-ai.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 15px 0 15px;
+  padding: 0 15px 20px 15px;
   font-family: "Poppins", sans-serif;
   font-weight: 100;
   background: rgb(238, 174, 202);
@@ -13,4 +13,5 @@
     rgba(238, 174, 202, 1) 0%,
     rgba(148, 187, 233, 1) 100%
   );
+  height: 100%
 }
